--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@bundlr-network/client": "^0.7.3",
+    "bignumber.js": "^9.0.2",
+    "ethers": "^5.6.4",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0"
